crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__inheritance__constructor.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/constructor.lox
---
success: true
exit_code: 0
----- stdout -----
value

----- stderr -----
