crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__inheritance__inherit_methods.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/inherit_methods.lox
---
success: true
exit_code: 0
----- stdout -----
foo
bar
bar

----- stderr -----
